feat: studygroup 전반적 수정 및 주석 작성